# rubik

./: .gitignore  .gitmodules  GNUmakefile  Makefile.am  README.adoc  draw_cube.c  draw_sphere.c  gui_cube.c  gui_sphere.c  rubik.c  solve_cube.c
build-kociemba/: Makefile.am  coordcube.c  cubiecube.c  facecube.c  prunetable_helpers.c  search.c  solve.c
build-kociemba/include/: color.h  coordcube.h  corner.h  cubiecube.h  edge.h  facecube.h  facelet.h  prunetable_helpers.h  search.h
include/: private_cube.h
include/rubik/: common.h  rubik.h  vector.h
targets/: debug-gcc.mk  default-gcc.mk
